jlamontSC-test/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>kw__Street_2__c</fullName>
        <label>Street 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__TermsServed__c</fullName>
        <label>Terms Served</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Twitter__c</fullName>
        <label>Twitter Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Votes_URL__c</fullName>
        <label>Votes URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Votes__c</fullName>
        <formula>HYPERLINK(  kw__Votes_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lv1&quot;, &quot;Votes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roll Call Votes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Webform__c</fullName>
        <label>Webform</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Weblog__c</fullName>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__You_Tube__c</fullName>
        <label>YouTube Channel</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_cuwfe__Authority__c</fullName>
        <label>Authority</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw_cuwfe__Current_FY_Budget__c</fullName>
        <label>Current FY Budget</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_cuwfe__Current_FY_Employees__c</fullName>
        <label>Current FY Employees</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_cuwfe__KW_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw_cuwfe__KW_Functions__c</fullName>
        <label>Functions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw_cuwfe__Organization_Code__c</fullName>
        <label>Organization Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_cuwfe__Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal Department</fullName>
                </value>
                <value>
                    <fullName>Independent Agency</fullName>
                </value>
                <value>
                    <fullName>The White House</fullName>
                </value>
                <value>
                    <fullName>Governor&apos;s Office</fullName>
                </value>
                <value>
                    <fullName>State Department</fullName>
                </value>
                <value>
                    <fullName>State Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw_cuwfe__Top_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kw_lfu_swfwc__CountyLocal__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_lfu_swfwc__County_Code__c</fullName>
        <label>County Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_lfu_swfwc__Municipal_Code__c</fullName>
        <label>Municipal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_lfu_swfwc__MunicipalityLocal__c</fullName>
        <label>Municipality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw_lfu_swfwc__StateLocal__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK - Alaska</fullName>
                </value>
                <value>
                    <fullName>AL - Alabama</fullName>
                </value>
                <value>
                    <fullName>AR - Arkansas</fullName>
                </value>
                <value>
                    <fullName>AS - American Samoa</fullName>
                </value>
                <value>
                    <fullName>AZ - Arizona</fullName>
                </value>
                <value>
                    <fullName>CA - California</fullName>
                </value>
                <value>
                    <fullName>CO - Colorado</fullName>
                </value>
                <value>
                    <fullName>CT - Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC - District of Columbia</fullName>
                </value>
                <value>
                    <fullName>DE - Delaware</fullName>
                </value>
                <value>
                    <fullName>FL - Florida</fullName>
                </value>
                <value>
                    <fullName>GA - Georgia</fullName>
                </value>
                <value>
                    <fullName>GU - Guam</fullName>
                </value>
                <value>
                    <fullName>HI - Hawaii</fullName>
                </value>
                <value>
                    <fullName>IA - Iowa</fullName>
                </value>
                <value>
                    <fullName>ID - Idaho</fullName>
                </value>
                <value>
                    <fullName>IL - Illinois</fullName>
                </value>
                <value>
                    <fullName>IN - Indiana</fullName>
                </value>
                <value>
                    <fullName>KS - Kansas</fullName>
                </value>
                <value>
                    <fullName>KY - Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA - Louisiana</fullName>
                </value>
                <value>
                    <fullName>MA - Massachusetts</fullName>
                </value>
                <value>
                    <fullName>MD - Maryland</fullName>
                </value>
                <value>
                    <fullName>ME - Maine</fullName>
                </value>
                <value>
                    <fullName>MI - Michigan</fullName>
                </value>
                <value>
                    <fullName>MN - Minnesota</fullName>
                </value>
                <value>
                    <fullName>MO - Missouri</fullName>
                </value>
                <value>
                    <fullName>MP - Mariana Islands</fullName>
                </value>
                <value>
                    <fullName>MS - Mississippi</fullName>
                </value>
                <value>
                    <fullName>MT - Montana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kwzd__Elected_Officials_Ids__c</fullName>
        <inlineHelpText>Do not manually update - used by KnowWho Zip to District and KnowWho Action Center</inlineHelpText>
        <label>Elected Officials Ids</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEFAULT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kwzd__KWD_Encrypted_Action_Id__c</fullName>
        <inlineHelpText>To secure the Ids that are passed into the Action Request Pages, they are stored as an encrypted Id and deciphered by the Action Center page</inlineHelpText>
        <label>KW Encrypted Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KWD_Last_Processed_DT__c</fullName>
        <inlineHelpText>The date and time this record was last processed.</inlineHelpText>
        <label>ZDM Last Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_CountyCode__c</fullName>
        <inlineHelpText>County FIPS code for this record.</inlineHelpText>
        <label>County Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_CountyDistrictDesc__c</fullName>
        <inlineHelpText>County district description for this record, if applicable.</inlineHelpText>
        <label>County District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_CountyDistrict__c</fullName>
        <inlineHelpText>County district code for this record, if applicable.</inlineHelpText>
        <label>County District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_CountyName__c</fullName>
        <inlineHelpText>County description or name for this record.</inlineHelpText>
        <label>County Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_Error_Code__c</fullName>
        <inlineHelpText>Error code returned if this record could not be processed.</inlineHelpText>
        <label>Error Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_MunicipalCode__c</fullName>
        <inlineHelpText>Municipal code for this record, if applicable, using either FIPS place code or county subcode.</inlineHelpText>
        <label>Municipal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_MunicipalDistrictDesc__c</fullName>
        <inlineHelpText>Municipal district description for this record, if applicable.</inlineHelpText>
        <label>Municipal District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_MunicipalDistrict__c</fullName>
        <inlineHelpText>Municipal district code for this record, if applicable.</inlineHelpText>
        <label>Municipal District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_MunicipalName__c</fullName>
        <inlineHelpText>Municipal description or name for this record, if applicable.</inlineHelpText>
        <label>Municipal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_MunicipalType__c</fullName>
        <inlineHelpText>Municipal type for this record, if applicable. Use to determine official Census Bureau value shown in Municipal Code.</inlineHelpText>
        <label>Municipal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_StateHouseDesc__c</fullName>
        <inlineHelpText>State house or assembly district description for this record.</inlineHelpText>
        <label>State House District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_StateHouseDistrict__c</fullName>
        <inlineHelpText>State house or assembly district code for this record.</inlineHelpText>
        <label>State House District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_StateSenateDesc__c</fullName>
        <inlineHelpText>State senate district description for this record.</inlineHelpText>
        <label>State Senate District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_StateSenateDistrict__c</fullName>
        <inlineHelpText>State senate district code for this record.</inlineHelpText>
        <label>State Senate District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_USHouseDesc__c</fullName>
        <inlineHelpText>US House district description for this record.</inlineHelpText>
        <label>US House District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_USHouseDistrict__c</fullName>
        <inlineHelpText>US House district code for this record.</inlineHelpText>
        <label>US House District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_USSenateDesc__c</fullName>
        <inlineHelpText>US Senate state name for this record.</inlineHelpText>
        <label>US Senate State Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KW_USSenateDistrict__c</fullName>
        <inlineHelpText>US Senate state abbreviation for this record.</inlineHelpText>
        <label>US Senate State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__KnowWho_Address_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was USPS Address data updated by KnowWho? Use this field to identify updates from ZDM process if you want to trigger an update to your address fields</inlineHelpText>
        <label>KnowWho Address Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kwzd__Latitude__c</fullName>
        <inlineHelpText>Latitude of this record&apos;s location.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kwzd__Longitude__c</fullName>
        <inlineHelpText>Longitude of this record&apos;s location.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kwzd__PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked denotes this record&apos;s address was matched as a PO box when last processed.</inlineHelpText>
        <label>PO Box?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kwzd__State_House_Text__c</fullName>
        <label>State House Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kwzd__State_Senate_Text__c</fullName>
        <label>State Senate Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kwzd__USPS_City__c</fullName>
        <inlineHelpText>City as identified by KnowWho Address Certification Service</inlineHelpText>
        <label>USPS City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__USPS_State__c</fullName>
        <inlineHelpText>State as identified by KnowWho Address Certification Service</inlineHelpText>
        <label>USPS State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__USPS_Street_2__c</fullName>
        <inlineHelpText>Second Street Address as identified by KnowWho Address Certification Service</inlineHelpText>
        <label>USPS Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__USPS_Street__c</fullName>
        <inlineHelpText>Street Address as identified by KnowWho Address Certification Service</inlineHelpText>
        <label>USPS Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__USPS_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, address was matched and verified by KnowWho Address Certification Service</inlineHelpText>
        <label>USPS Deliverable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kwzd__USPS_Zip__c</fullName>
        <inlineHelpText>Zipcode as identified by KnowWho Address Certification Service</inlineHelpText>
        <label>USPS Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwzd__US_House_Text__c</fullName>
        <label>US House Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kwzd__US_Senate_Text__c</fullName>
        <label>US Senate Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kwzd__ZDM_Location__c</fullName>
        <inlineHelpText>ZDM Location Field based on LON/LAT from ZDM</inlineHelpText>
        <label>ZDM Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>kwzd__ZDM_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZDM_Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kwzd__ZTDM_Expiry_Date__c</fullName>
        <inlineHelpText>Your subscription expiration date. Contact your KnowWho sales rep with any questions.</inlineHelpText>
        <label>ZDM Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>kwzd__Zip_4__c</fullName>
        <inlineHelpText>ZIP Plus 4 value for this record.</inlineHelpText>
        <label>Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__About_Us__c</fullName>
        <description>Manually populated field used to describe the Account.</description>
        <inlineHelpText>Area for general information about the Account.</inlineHelpText>
        <label>About Us</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Acquired_Date__c</fullName>
        <description>Manually populated date indicating when the Account was acquired.</description>
        <inlineHelpText>Date indicating when the Account was acquired.</inlineHelpText>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Acquired_Source__c</fullName>
        <description>Manually populated field indicating the Channel used to acquire this Account.</description>
        <inlineHelpText>Channel used to acquire this Account.</inlineHelpText>
        <label>Acquired Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Bios__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Manually populated field indicating is this account active?</description>
        <inlineHelpText>Is this account active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Age_for_Preference_Rule_Engine__c</fullName>
        <description>Autocalculates number of days from account created date until today. This value will be used in preference rule engine.</description>
        <formula>MAX(0,  NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autocalculates number of days from account created date until today.</inlineHelpText>
        <label>Age for Preference Rule Engine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Account acting as the Agency for this Account.</description>
        <inlineHelpText>Link to the Account acting as the Agency for this Account.</inlineHelpText>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. The Account selected must be an Organizational Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Organizational</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Client Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Category__c</fullName>
        <description>Manually populated field indicating the type of Organization.</description>
        <inlineHelpText>Indicates the type of Organization.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Bios__External_ID__c</fullName>
        <description>Field used by the Batch Upload Matching process. The field is not External or Unique in Salesforce terms.</description>
        <inlineHelpText>@Deprecated(Version=2.10)</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Funding_Area__c</fullName>
        <description>Funding focus area for organization.</description>
        <inlineHelpText>Funding focus area for organization.</inlineHelpText>
        <label>Funding Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Pets</fullName>
                </value>
                <value>
                    <fullName>Poverty</fullName>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to AddressId) when Preferred Billing is checked on the Account Address record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Address object) when Preferred Billing is checked on the Account Address record.</inlineHelpText>
        <label>Preferred Billing Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Accounts (Preferred Billing Address)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Billing_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Demographic_Profile__c</fullName>
        <description>Formula Field providing gender, age range and ethnicity of Preferred Contact.</description>
        <formula>BLANKVALUE(rC_Bios__Preferred_Contact__r.rC_Bios__Demographic_Profile__c, &apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gender, age range and ethnicity of Preferred Contact	.</inlineHelpText>
        <label>Preferred Contact Demographic Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Email__c</fullName>
        <description>Formula field indicating the Preferred Contact&apos;s Preferred Email.</description>
        <formula>rC_Bios__Preferred_Contact__r.Email</formula>
        <inlineHelpText>Indicates the Preferred Contact&apos;s Preferred Email.</inlineHelpText>
        <label>Preferred Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Phone__c</fullName>
        <description>Formula field indicating the Preferred Contact&apos;s Preferred Phone #.</description>
        <formula>rC_Bios__Preferred_Contact__r.Phone</formula>
        <inlineHelpText>Indicates the Preferred Contact&apos;s Preferred Phone #.</inlineHelpText>
        <label>Preferred Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to Contact) when Preferred Contact is checked on the Contact record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Contact object) when Preferred Contact is checked on the Contact record.</inlineHelpText>
        <label>Preferred Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Preferred Contact)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to AddressId) when Preferred Shipping is checked on the Account_ManageContacts VF page.</description>
        <inlineHelpText>Indicates the preferred shipping address.</inlineHelpText>
        <label>Preferred Shipping Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Accounts (Preferred Shipping Address)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Shipping_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Primary_Constituent_Type__c</fullName>
        <description>Subcategory of primary Constituency type rolls up to this field.</description>
        <inlineHelpText>Subcategory of primary Constituency type rolls up to this field.</inlineHelpText>
        <label>Primary Constituent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Recover_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in conjunction with roundData to recover all data associated with account. If this is set to True, roundData will push all archived data (any archive enabled object) back into roundCause within a few hours, the assumption being that these records do not meet current archival settings.</description>
        <inlineHelpText>Set to &quot;True&quot; to recover all archived data for this account.</inlineHelpText>
        <label>Recover?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Addresses__c</fullName>
        <description>Automatically populated via auto rollup, this field contains the greatest (most recent) Last Modified Date out of all the Account Addresses on the Account.</description>
        <inlineHelpText>Contains the greatest (most recent) Last Modified Date out of all the Account Addresses on the Account.</inlineHelpText>
        <label>Rollup Addresses</label>
        <summarizedField>rC_Bios__Account_Address__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>rC_Bios__Account_Address__c.rC_Bios__Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Primary_Constituent_Preference__c</fullName>
        <description>Indicates the date and time when Primary Constituent Type roll-up from Constituent Type Preference record.</description>
        <inlineHelpText>Date/time when last Primary Constituent Type Preference updated.</inlineHelpText>
        <label>Rollup Primary Constituent Preference</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Salutation__c</fullName>
        <description>Salutation created by Preferred and Secondary Contact Name aggregation or by Preferred Salutation.</description>
        <inlineHelpText>Primary Salutation for the Account.</inlineHelpText>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to Contact) when Secondary Contact is checked on the Contact record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Contact) when Secondary Contact is checked on the Contact record.</inlineHelpText>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Secondary Contact)</relationshipLabel>
        <relationshipName>Accounts_Secondary_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Warning_Comments__c</fullName>
        <description>Critical alerts or information that needs high visibility.</description>
        <inlineHelpText>Critical alerts or information that needs high visibility.</inlineHelpText>
        <label>Warning Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Active_Sustainer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates the  Account has an active Sustaining gift.</description>
        <inlineHelpText>When checked, indicates the Account has an active Sustaining gift.</inlineHelpText>
        <label>Active Sustainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Calendar_Year_Hard_Credit_Amount__c</fullName>
        <description>Sum of Current Giving Amount fields from all Hard Credit enabled Gifts within Current Calendar Year tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <label>Current Calendar Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Calendar_Year_Hard_Credit_Count__c</fullName>
        <description>Total count of Current Givings from all Hard Credit enabled Gifts within Current Calendar Year. This field is tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <label>Current Calendar Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Amount__c</fullName>
        <description>Sum of Current Amount field across all most recent active Summaries (one per record type) tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Dollar value of gifts on Account where Hard Credits were received for the current member year.</inlineHelpText>
        <label>Current Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Count__c</fullName>
        <description>Total count of Opportunities directly related to all most recent active Summaries (one per record type) tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Number of gifts on Account where Hard Credits were received for the current member year.</inlineHelpText>
        <label>Current Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>